deployment/kubernetes/apigateway.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kong-proxy
  labels:
    app: kong-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-proxy
  template:
    metadata:
      labels:
        app: kong-proxy
    spec:
      containers:
      - name: kong-proxy
        image: custom_kong:2.8.1-alpine
        volumeMounts:
          - name: kong-config
            mountPath: /usr/local/kong/declarative/kong.yml
            subPath: kong.yml
            readOnly: true
          - name: kong-ssl-cert
            mountPath: /etc/secrets/certs
            readOnly: true
      volumes:
        - name: kong-config
          configMap:
            name: kong-config
        - name: kong-ssl-cert
          secret:
            secretName: kong-ssl-cert
---
kind: Service
apiVersion: v1
metadata:
  name: kong-proxy-svc
spec:
  selector:
    app: kong-proxy
  ports:
  - protocol: "TCP"
    port: 8100
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kong-proxy-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/secure-backends: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '64k'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '16'
spec:
  tls:
    - hosts:
        - tokenhandler.mycompany.com
      secretName: mycompany-com-tls
  rules:
    - host: tokenhandler.mycompany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-proxy-svc
                port:
                  number: 8100
